# LearningHaskell

./: README.md
Chapter13/hangman/: hangman.cabal
Chapter13/hangman/src/: Main.hs
Chapter13/hello/: hello.cabal
Chapter14.hsproj/: .uuid  CaesarCipher.hs  Chapter14.cabal  CipherDirection.hs  GenExercises.hs  Hangman.hs  HangmanTesting.hs  Idempotence.hs  QuickCheck11.hs  QuickCheck4.hs  QuickCheck5.hs  QuickCheck6.hs  QuickCheck7.hs  QuickCheck8.hs  QuickCheck9.hs  TestCiphers.hs  VigenereCipher.hs  _Addition.hsplay  _CaesarCipher.hsplay  _GenExercises.hsplay  _HangmanTesting.hsplay  _QuickCheck2.hsplay  _TestCiphers.hsplay
Chapter15.hsproj/: .uuid  Bull.hs  Chapter15.cabal  OptionalMonoid.hs  _OptionalMonoid.hsplay
FizzBuzz.hsproj/: .uuid  FizzBuzz.cabal  Main.hs  _Main.hsplay
HaskellProgrammingFromFirstPrinciples/Chapter15.hsproj/: .uuid  ArbitrarySum.hs  Bull.hs  Chapter15.cabal  MadLibs.hs  MaybeAnotherMonoid.hs  Monoid1.hs  Monoid2.hs  Monoid3.hs  Monoid4.hs  Monoid5.hs  Monoid6.hs  Monoid7.hs  Monoid8.hs  MonoidAssociationLaws.hs  MonoidLaws.hs  OptionalMonoid.hs  SemiGroup10.hs  SemiGroup11.hs  SemiGroup12.hs  SemiGroup13.hs  SemiGroup2.hs  SemiGroup3.hs  SemiGroup4.hs  SemiGroup5.hs  SemiGroup6.hs  SemiGroup7.hs  SemiGroup8.hs  SemiGroup9.hs  SemiGroupAssociativeLaw.hs  Semigroup1.hs  SemigroupTest.hs  ShrinkingAndShowingFunctions1.hs  ShrinkingAndShowingFunctions2.hs  ShrinkingAndShowingFunctions3.hs  _ArbitrarySum.hsplay  _MaybeAnotherMonoid.hsplay  _Monoid8.hsplay  _MonoidAssociationLaws.hsplay  _MonoidLaws.hsplay  (+9 more)
HaskellProgrammingFromFirstPrinciples/Chapter18.hsproj/: .uuid  Chapter18.cabal  Chapter18.hs  EitherMonad.hs  EitherMonadImplementation.hs  ExamplesOfMonadsUse.hs  Exercises.hs  _Chapter18.hsplay  _EitherMonad.hsplay  _ExamplesOfMonadsUse.hsplay  _Exercises.hsplay
HaskellProgrammingFromFirstPrinciples/Chapter20.hsproj/: .uuid  Chapter20.cabal  Chapter20.hs  ChapterExercises206.hs  ExercisesLibraryFunctions.hs  FoldableInstances.hs  OptionalMonoid.hs  _Chapter20.hsplay  _ChapterExercises206.hsplay  _ExercisesLibraryFunctions.hsplay  _FoldableInstances.hsplay  _OtherDerivedOperations.hsplay
HaskellProgrammingFromFirstPrinciples/Chapter21.hsproj/: .uuid  Chapter21.cabal  Chapter21.hs  HttpStuff.hs  MorseCodeRevisited.hs  ReimplementingWeakerTypes.hs  TraversableInstances.hs  _Chapter21.hsplay  _MorseCodeRevisited.hsplay  _ReimplementingWeakerTypes.hsplay  _TraversableInstances.hsplay
HaskellProgrammingFromFirstPrinciples/Chapter23.hsproj/: .uuid  Chapter23.cabal  Chapter23.hs  Exercises.hs  FizzBuzz.hs  FizzBuzz2.hs  FizzBuzz3.hs  FizzBuzzDifferently.hs  FromToExperiments.hs  MoiState.hs  RandomExample.hs  RandomExample2.hs  _Chapter23.hsplay  _Exercises.hsplay  _FizzBuzz.hsplay  _FizzBuzzDifferently.hsplay  _FromToExperiments.hsplay  _MoiState.hsplay  _RandomExample.hsplay
HaskellProgrammingFromFirstPrinciples/Chapter24.hsproj/: .uuid  Chapter24.cabal  Chapter24.hs  _Chapter24.hsplay
HaskellProgrammingFromFirstPrinciples/Chapter26.hsproj/: .uuid  Chapter26.cabal  EitherT.hs  Main.hs  OuterInner.hs  ReaderT.hs  StateT.hs  _EitherT.hsplay  _Main.hsplay  _OuterInner.hsplay  _ReaderT.hsplay  _StateT.hsplay
HaskellProgrammingFromFirstPrinciples/Chapter27.hsproj/: .uuid  Chapter27.cabal  OutsideIn.hs  _Main.hsplay
HaskellProgrammingFromFirstPrinciples/Chapter28.hsproj/: .uuid  BenchIndex.hs  Chapter28.cabal  HeapProfile  HeapProfile.hs  ProfilingTime  ProfilingTime.hs  _BenchIndex.hsplay  cafSaturation  cafSaturation.hs
HaskellProgrammingFromFirstPrinciples/Chapter29.hsproj/: .uuid  Chapter29.cabal  NestedIO.hs  ToShareOrNotToShare.hs  VigenereCipher.hs  WhatHappens  WhatHappens.hs  _NestedIO.hsplay  _ToShareOrNotToShare.hsplay  _VigenereCipher.hsplay  _WhatHappens.hsplay
HaskellProgrammingFromFirstPrinciples/chapter12.hsproj/: .uuid  BinaryTree.hs  Chapter12.hs  _Chapter12.hsplay  chapter12.cabal
Monads and all that/Readers and Writers.hsproj/: .uuid  MyList.hs  MyList2.hs  Reader.hs  ReadersandWriters.cabal  Writer.hs  _MyList.hsplay  _MyList2.hsplay
Monads and all that/Tree Monad.hsproj/: .uuid  Main.hs  MonadLaws.hs  Tree.hs  _Main.hsplay  _Tree.hsplay  monadsandallthat.cabal
ParallelConcurrent/2-BankAccount.hsproj/: .uuid  Account0.hs  Account1.hs  Account3.hs  Account4.hs  Account5.hs  Account6.hs  Account7.hs  _Account0.hsplay  exec2STMBankAccount.cabal
ParallelConcurrent/ForkExperiments.hsproj/: .uuid  BlockedExceptionMVar.hs  ForkExperiments.cabal  ForkExperiments.hs  ForkMVars.hs  HaskellMistakes.hs  _HaskellMistakes.hsplay
haskellForMacMiscPlayground/Diagrams with Sunflower.hsproj/: .uuid  BrewerSet.hs  Chart.hs  Diagrams.cabal  Diagrams.hs  ExampleStocks.hs  Rasterific.hs  _Diagrams.hsplay  _Rasterific.hsplay
haskellForMacMiscPlayground/UnderstandingReader.hsproj/: .uuid  Example2.hs  Example3.hs  Main.hs  SimpleReader.hs  ThreadingVsReader.hs  UnderstandingReader.cabal  _Example3.hsplay  _Main.hsplay  _SimpleReader.hsplay
haskellForMacMiscPlayground/lyahfgg-chapter14.hsproj/: .uuid  LyahfggChapter14.hs  _LyahfggChapter14.hsplay  lyahfgg-chapter14.cabal
haskellForMacMiscPlayground/monads.hsproj/: .uuid  Monads.hs  MonoidExamples.hs  StateMonadExample.hs  _Monads.hsplay  _MonoidExamples.hsplay  _StateMonadExample.hsplay  monads.cabal
haskellForMacMiscPlayground/pierre-the-pole-balancer.hsproj/: .uuid  1__#$!@%!#___PierreThePoleBalancer.hsplay  PierreThePoleBalancer1.hs  PierreThePoleBalancer2.hs  _PierreThePoleBalancer1.hsplay  _PierreThePoleBalancer2.hsplay  pierre-the-pole-balancer.cabal
haskellForMacMiscPlayground/quicktest.hsproj/: .uuid  _quicktest.hsplay  quicktest.cabal  quicktest.hs
haskellForMacMiscPlayground/realworldhaskellch04.hsproj/: .uuid  Prettify.hs  PrettyJSON.hs  PutJSON.hs  SimpleJSON.hs  _Prettify.hsplay  _PrettyJSON.hsplay  _PutJSON.hsplay  _SimpleJSON.hsplay  _realworldhaskellch04.hsplay  realworldhaskellch04.cabal  realworldhaskellch04.hs
haskellForMacMiscPlayground/understandingMaybe.hsproj/: .uuid  _understandingMaybe.hsplay  understandingMaybe.cabal  understandingMaybe.hs
(+477 files in other folders)
