name: Chapter14
version: 1.0
cabal-version: 1.11
build-type: Simple
license: AllRightsReserved
stability: experimental
x-ghc-framework-version: 7.10.3-5.9-2
x-last-ide-version: HfM1.2.1
Executable Chapter14
  main-is: QuickCheck1.hs
  buildable: True
  build-depends:
      base -any,
      QuickCheck -any
  other-modules:
      QuickCheck9
      QuickCheck2
      QuickCheck3
      QuickCheck11
      QuickCheck6
      QuickCheck7
      Addition
      QuickCheck5
      QuickCheck8
      QuickCheck10
      QuickCheck4
