name: Chapter14
version: 1.0
cabal-version: 1.11
build-type: Simple
license: AllRightsReserved
stability: experimental
x-ghc-framework-version: 7.10.3-5.9-2
x-last-ide-version: HfM1.2.1
Executable Chapter14
  main-is: QuickCheck1.hs
  buildable: True
  build-depends:
      base -any,
      QuickCheck -any,
      random -any
  other-modules:
      HangmanTesting
      QuickCheck2
      Idempotence
      GenExercises
      QuickCheck11
      CaesarCipher
      QuickCheck5
      QuickCheck7
      QuickCheck8
      QuickCheck10
      QuickCheck4
      QuickCheck3
      TestCiphers
      CipherDirection
      QuickCheck6
      QuickCheck9
      Addition
      VigenereCipher
      FailureExercise
      Hangman
