name: Chapter15
version: 1.0
cabal-version: 1.11
build-type: Simple
license: AllRightsReserved
stability: experimental
x-ghc-framework-version: 7.10.3-5.9-2
x-last-ide-version: HfM1.2.1
Executable Chapter15
  main-is: Chapter15.hs
  buildable: True
  build-depends:
      base -any,
      QuickCheck -any
  other-modules:
      OptionalMonoid
      MaybeAnotherMonoid
      Bull
      MadLibs
      MonoidAssociationLaws
