name: Chapter15
version: 1.0
cabal-version: 1.11
build-type: Simple
license: AllRightsReserved
stability: experimental
x-ghc-framework-version: 7.10.3-5.9-2
x-last-ide-version: HfM1.2.1
Executable Chapter15
  main-is: Chapter15.hs
  buildable: True
  build-depends:
      base -any,
      QuickCheck -any,
      HUnit -any,
      semigroups -any
  other-modules:
      Semigroup1
      SemiGroupAssociativeLaw
      SemigroupTest
      SemiGroup6
      SemiGroup2
      MonoidLaws
      ArbitrarySum
      SemiGroup3
      MadLibs
      SemiGroup5
      SemiGroup7
      SemiGroup9
      MaybeAnotherMonoid
      SemiGroup11
      SemiGroup4
      OptionalMonoid
      Bull
      SemiGroup8
      SemiGroup10
