name: Chapter15
version: 1.0
cabal-version: 1.11
build-type: Simple
license: AllRightsReserved
stability: experimental
x-ghc-framework-version: 7.10.3-5.9-2
x-last-ide-version: HfM1.2.1
Executable Chapter15
  main-is: Chapter15.hs
  buildable: True
  build-depends:
      base -any,
      QuickCheck -any,
      HUnit -any,
      semigroups -any
  other-modules:
      SemiGroup10
      Monoid3
      Semigroup1
      SemiGroupAssociativeLaw
      SemigroupTest
      SemiGroup6
      SemiGroup2
      ArbitrarySum
      SemiGroup5
      MadLibs
      SemiGroup11
      Monoid2
      MonoidLaws
      SemiGroup13
      SemiGroup7
      SemiGroup3
      SemiGroup9
      Monoid1
      MaybeAnotherMonoid
      Monoid4
      SemiGroup12
      SemiGroup4
      OptionalMonoid
      SemiGroup8
      Bull
      Monoid5
