name: Chapter23
version: 1.0
cabal-version: 1.11
build-type: Simple
license: AllRightsReserved
stability: experimental
x-ghc-framework-version: 8.0.2-8.9-3
x-last-ide-version: HfM1.5.1
Executable Chapter23
  main-is: Chapter23.hs
  buildable: True
  build-depends:
      hedis -any,
      random -any,
      text -any,
      scotty -any,
      transformers -any,
      base -any,
      network-uri -any,
      dlist -any,
      bytestring -any
  other-modules:
      FizzBuzz2
      Exercises
      FromToExperiments
      FizzBuzz
      FizzBuzz3
      MoiState
      RandomExample
      FizzBuzzDifferently
      RandomExample2
