name: Chapter27
version: 1.0
cabal-version: 1.22
build-type: Simple
license: AllRightsReserved
stability: experimental
x-ghc-framework-version: 8.0.2-8.9-3
x-last-ide-version: HfM1.5.1
Executable Chapter27
  main-is: Main.hs
  buildable: True
  build-depends:
      base -any
  default-language: Haskell2010
  other-modules:
      OutsideIn
