name: Chapter28
version: 1.0
cabal-version: 1.22
build-type: Simple
license: AllRightsReserved
stability: experimental
x-ghc-framework-version: 8.0.2-8.9-3
x-last-ide-version: HfM1.5.1
Executable Chapter28
  main-is: BenchIndex.hs
  buildable: True
  build-depends:
      criterion -any,
      base -any
  default-language: Haskell2010
  other-modules:
      ProfilingTime
