name: ReadersandWriters
version: 1.0
cabal-version: 1.11
build-type: Simple
license: AllRightsReserved
stability: experimental
x-ghc-framework-version: 7.10.3-6.29-1
x-last-ide-version: HfM1.4.0
Executable ReadersandWriters
  main-is: Main.hs
  buildable: True
  build-depends:
      base -any,
      QuickCheck -any
  other-modules:
      Reader
      MyList2
      MyList
      MonadLaws
      Writer
