name: Diagrams
version: 1.0
cabal-version: 1.6
build-type: Simple
license: BSD3
stability: experimental
synopsis: Demonstrate the use of the Chart, Diagrams & Rasterific
description:
    This project demonstrates the use of the Rasterific, Diagrams, and Chart libraries in Haskell for Mac’s interactive playgrounds. Most of the code is taken from samples of the respective packages.
category: Sample project
data-files:
    SourceSansPro_R.svg
    SourceSansPro_RB.svg
x-ghc-framework-version: 7.10.3-5.9-2
x-last-ide-version: HfM1.2.1
Executable Diagrams
  main-is: Diagrams.hs
  buildable: True
  build-depends:
      Chart-diagrams -any,
      SVGFonts -any,
      Chart -any,
      diagrams-rasterific -any,
      time -any,
      base -any,
      colour -any,
      containers -any,
      JuicyPixels -any,
      Rasterific -any,
      diagrams-lib -any
  other-modules:
      BrewerSet
      ExampleStocks
      Chart
      Rasterific
