name: realworldhaskellch04
version: 1.0
cabal-version: 1.6
build-type: Simple
license: AllRightsReserved
stability: experimental
x-ghc-framework-version: 7.10.3-5.9-2
x-last-ide-version: HfM1.2.1
Executable realworldhaskellch04
  main-is: realworldhaskellch04.hs
  buildable: True
  build-depends:
      base -any
  other-modules:
      PutJSON
      SimpleJSON
      Prettify
      PrettyJSON
