cabal-version: >=1.10
name: FoldingAndTraversing
version: 0.1.0.0
license: BSD3
license-file: LICENSE
copyright: Rocketbox Ltd
maintainer: nick.ager@gmail.com
author: Nick Ager
homepage: https://github.com/nickager/FoldingAndTraversing#readme
category: Experiments
build-type: Simple
extra-source-files:
    README.md

executable FoldingAndTraversing
    main-is: Main.hs
    hs-source-dirs: src
    default-language: Haskell2010
    build-depends:
        base >=4.7 && <5,
        mtl -any
