name:                caesarCipher
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/caesarCipher#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable caesarCipher
  hs-source-dirs:      exe
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                      ,caesarCipher

library
  hs-source-dirs:      src
  exposed-modules:     CaesarCipher
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
